--- a/include_sidebar.html
+++ b/include_sidebar.html
@@ -73,13 +73,13 @@
                 </a>
                 <ul class="nav nav-treeview">
                   <li class="nav-item">
-                    <a href="#" class="nav-link">
+                    <a href="/user_management.html" class="nav-link">
                       <i class="fas fa-users nav-icon"></i>
                       <p>User Management</p>
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a href="#" class="nav-link">
+                    <a href="/book_management.html" class="nav-link">
                       <i class="fas fa-book nav-icon"></i>
                       <p>Book Management</p>
                     </a>
