--- a/change_password.html
+++ b/change_password.html
@@ -18,7 +18,7 @@
   <!-- Google Font: Source Sans Pro -->
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
   <!-- CSS -->
-  <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
   <link rel="stylesheet" type="text/css" href="./assets/css/sidebar.css">
   <link rel="icon" href="./assets/media/icon/favicons.ico">
 
@@ -285,14 +285,14 @@
 
 
     <!-- jQuery -->
-    <script src="assets/vendors/plugins/jquery/jquery.min.js"></script>
+    <script src="./assets/vendors/plugins/jquery/jquery.min.js"></script>
     <!-- Bootstrap 4 -->
-    <script src="assets/vendors/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="./assets/vendors/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
     <!-- jquery-validation -->
-    <script src="assets/vendors/plugins/jquery-validation/jquery.validate.min.js"></script>
-    <script src="assets/vendors/plugins/jquery-validation/additional-methods.min.js"></script>
+    <script src="./assets/vendors/plugins/jquery-validation/jquery.validate.min.js"></script>
+    <script src="./assets/vendors/plugins/jquery-validation/additional-methods.min.js"></script>
     <!-- AdminLTE App -->
-    <script src="assets/vendors/dist/js/adminlte.min.js"></script>
+    <script src="./assets/vendors/dist/js/adminlte.min.js"></script>
     <script src="change_pwd.js"></script>
 
 
