--- a/Profile.html
+++ b/Profile.html
@@ -121,7 +121,7 @@
                   <!-- Add icons to the links using the .nav-icon class
                 with font-awesome or any other icon font library -->
                 <li class="nav-item">
-                  <a href="profile.html" class="nav-link">
+                  <a href="profile.html" class="nav-link active">
                     <i class="nav-icon fas fa-user"></i>
                     <p>
                       Profile
@@ -129,7 +129,7 @@
                   </a>
                 </li>
                   <li class="nav-item">
-                    <a href="index.html" class="nav-link active" id="index">
+                    <a href="index.html" class="nav-link" id="index">
                       <i class="nav-icon fas fa-book"></i>
                       <p>
                         Explore
@@ -301,93 +301,95 @@
                   </div>
                   <div class="data">
                       <h5 >Your Balance</h5>
-                      <span id="mybalance">Rp 20.000,-</span>
+                      <span id="mybalance">Rp 50.000,-</span>
                       <hr>
                   </div>
                   <div class="data">
-                    <a href="change_password.html"><strong>Change Password</strong></a>
+                    <a href="change_password.html"><strong><u>Change Password</u></strong></a>
                   </div>
                 </div>
             </div>
         </div>  
       </div>
-      <div id="container-editform">
-        <h3 style="text-align:center;">Edit your profile</h3>
-        <!-- <form action="#"> -->
-            <div class="form-item">
-              <div class="row">
-                <div class="col-lg-8">
-                  <label class="input-title">First Name</label>
-                </div>
-                <div class="col-lg-12">
-                  <input class="input-value" id="user-firstname" type="text" name="user-firstname">
-                </div>
-              </div>
-            </div>
-
-            <div class="form-item">
-              <div class="row">
-                <div class="col-lg-8">
-                  <label class="input-title">Last Name</label>
-                </div>
-                <div class="col-lg-12">
-                  <input class="input-value" id="user-lastname" type="text" name="user-lastname">
-                </div>
-              </div>
-            </div>
-
-            <div class="form-item">
-              <div class="row">
-                <div class="col-lg-8">
-                  <label class="input-title">Date of Birth</label>
-                </div>
-                <div class="col-lg-12">
-                  <input class="input-value" id="date-birth" type="text" name="date-birth" placeholder="dd/mm/yyyy">
-                </div>
-              </div>
-            </div>
-
-            <div class="form-item">
-              <div class="row">
-                <div class="col-lg-8">
-                  <label class="input-title">Address</label>
-                </div>
-                <div class="col-lg-12">
-                  <input class="input-value" id="user-address" type="text" name="user-address">
-                </div>
-              </div>
-            </div>
-
-            <div class="form-item">
-              <div class="row">
-                <div class="col-lg-8">
-                  <label class="input-title">Email</label>
-                </div>
-                <div class="col-lg-12">
-                  <input class="input-value" id="user-email" type="email" name="user-email" placeholder="example@gmail.com">
-                </div>
-              </div>
-            </div>
-
-            <div class="form-item">
-              <div class="row">
-                <div class="col-lg-8">
-                  <label class="input-title">Phone Number</label>
-                </div>
-                <div class="col-lg-12">
-                  <input class="input-value" id="user-number" type="text" name="user-number" placeholder="+62-812-345-6789">
-                </div>
-              </div>
-            </div>
-
-            <div class="btn-editform">
-              <input class="btn btn-primary" type="submit" value="Submit" onclick="submitEditProfile()">
-              <button type="button" class="btn btn-secondary">Close</button>
-            </div>
-        <!-- </form> -->
-      </div>
     </section>
-  </div>  
+
+      <!-- Edit Form UserProfile -->
+        <div id="container-editform">
+          <h3 style="text-align:center;">Edit your profile</h3>
+          <form action="#">
+              <div class="form-item">
+                <div class="row">
+                  <div class="col-lg-8">
+                    <label class="input-title">First Name</label>
+                  </div>
+                  <div class="col-lg-12">
+                    <input class="input-value" id="user-firstname" type="text" name="user-firstname">
+                  </div>
+                </div>
+              </div>
+
+              <div class="form-item">
+                <div class="row">
+                  <div class="col-lg-8">
+                    <label class="input-title">Last Name</label>
+                  </div>
+                  <div class="col-lg-12">
+                    <input class="input-value" id="user-lastname" type="text" name="user-lastname">
+                  </div>
+                </div>
+              </div>
+
+              <div class="form-item">
+                <div class="row">
+                  <div class="col-lg-8">
+                    <label class="input-title">Date of Birth</label>
+                  </div>
+                  <div class="col-lg-12">
+                    <input class="input-value" id="date-birth" type="text" name="date-birth" placeholder="dd/mm/yyyy">
+                  </div>
+                </div>
+              </div>
+
+              <div class="form-item">
+                <div class="row">
+                  <div class="col-lg-8">
+                    <label class="input-title">Address</label>
+                  </div>
+                  <div class="col-lg-12">
+                    <input class="input-value" id="user-address" type="text" name="user-address">
+                  </div>
+                </div>
+              </div>
+
+              <div class="form-item">
+                <div class="row">
+                  <div class="col-lg-8">
+                    <label class="input-title">Email</label>
+                  </div>
+                  <div class="col-lg-12">
+                    <input class="input-value" id="user-email" type="email" name="user-email" placeholder="example@gmail.com">
+                  </div>
+                </div>
+              </div>
+
+              <div class="form-item">
+                <div class="row">
+                  <div class="col-lg-8">
+                    <label class="input-title">Phone Number</label>
+                  </div>
+                  <div class="col-lg-12">
+                    <input class="input-value" id="user-number" type="text" name="user-number" placeholder="+62-812-345-6789">
+                  </div>
+                </div>
+              </div>
+
+              <div class="btn-editform">
+                <input class="btn btn-primary" type="submit" value="Submit" onclick="submitEditProfile()">
+                <button type="button" class="btn btn-secondary">Close</button>
+              </div>
+          </form>
+        </div>
+    </div> 
     
     
 
