--- a/change_password.html
+++ b/change_password.html
@@ -107,7 +107,7 @@
                     <!-- Add icons to the links using the .nav-icon class
                   with font-awesome or any other icon font library -->
                   <li class="nav-item">
-                    <a href="profile.html" class="nav-link">
+                    <a href="profile.html" class="nav-link active">
                       <i class="nav-icon fas fa-user"></i>
                       <p>
                         Profile
@@ -115,7 +115,7 @@
                     </a>
                   </li>
                     <li class="nav-item">
-                      <a href="index.html" class="nav-link active" id="index">
+                      <a href="index.html" class="nav-link " id="index">
                         <i class="nav-icon fas fa-book"></i>
                         <p>
                           Explore
