--- a/top_up.html
+++ b/top_up.html
@@ -145,10 +145,10 @@
                                                 </div>
                                             </div> <br><br>
                                             <div class="row row-cols-1 row-cols-md-1">                                                
-                                                <div class="md-2"><input id="password" type="password" placeholder="Password"></div>
-                                                <div class="md-2"><input id="password2" type="password" placeholder="Confirm Password"></div>
+                                                <div class="md-2"><input  id="passwordconfirm" type="password" placeholder="Password" ></div>
+                                                <div class="md-2"><input  id="passwordconfirm2" type="password" placeholder="Confirm Password"></div>
                                             </div>                                            
-                                            <input type="button" name="next" class="next action-button" value="Submit">
+                                            <input type="button"W onclick="checkpassword()" value="Submit">
                                         </div>
                                     </fieldset>
                                 </form>
