--- a/detail.html
+++ b/detail.html
@@ -22,9 +22,6 @@
     <link rel="stylesheet" href="./assets/vendors/plugins/daterangepicker/daterangepicker.css">
     <!-- Tempusdominus Bbootstrap 4 -->
     <link rel="stylesheet" href="./assets/vendors/plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css">
-
-    <link rel="stylesheet" type="text/css" href="./assets/vendors/plugins/slick/slick.css">
-    <link rel="stylesheet" type="text/css" href="./assets/vendors/plugins/slick/slick-theme.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
     <link rel="icon" href="./assets/media/icon/favicons.ico">
 
@@ -419,6 +416,9 @@
   <!-- Tempusdominus Bootstrap 4 -->
   <script src="./assets/vendors/plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
   <script type="text/javascript" src="./assets/js/modal.js"></script>
+  <!-- Datepicker -->
+  <script src="./assets/js/datepicker.js" type="text/javascript"></script>
+
 </body>
 
 </html>
