--- a/include_sidebar.html
+++ b/include_sidebar.html
@@ -81,13 +81,13 @@
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a href="#" class="nav-link">
+                    <a href="rent_management.html" class="nav-link">
                       <i class="far fa-hourglass nav-icon"></i>
                       <p>Rent Management </p>
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a href="#" class="nav-link">
+                    <a href="fine_management.html" class="nav-link">
                       <i class="fas fa-gavel nav-icon"></i>
                       <p>Fine Management</p>
                     </a>
