--- a/fine_management.html
+++ b/fine_management.html
@@ -21,14 +21,22 @@
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
     <link rel="icon" href="./assets/media/icon/favicons.ico">
-
-
 </head>
 
 <body class="hold-transition sidebar-mini layout-fixed">
     <!-- Site wrapper -->
     <div class="wrapper">
-        <div w3-include-html="include_navbar.html"></div>
+        <!-- Navbar -->
+        <nav class="main-header navbar navbar-expand navbar-light navbar-white d-flex flex-row">
+            <div class="toggle-navbar-nav">
+                <ul class="navbar-nav toggle-navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i
+                                class="fas fa-bars"></i></a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
         <div w3-include-html="include_sidebar.html"></div>
 
         <!-- Content Wrapper. Contains page content -->
@@ -63,7 +71,7 @@
                                 </div>
                                 <!-- /.card-header -->
                                 <div class="card-body">
-                                    <table id="datatable1" class="table table-bordered table-striped">
+                                    <table id="example1" class="table table-bordered table-striped">
                                         <thead>
                                             <tr class="text-center" >
                                                 <th>No</th>
@@ -81,7 +89,7 @@
                                                 <td class="text-center">1</td>
                                                 <td class="text-center py-0 align-middle">
                                                     <div class="btn-group btn-group-sm">
-                                                      <a href="#" class="btn btn-primary" title="Accept" ><i class="fas fa-check-square"></i></a>
+                                                      <a href="payment.html" class="btn btn-primary" title="Accept" ><i class="fas fa-check-square"></i></a>
                                                     </div>
                                                 </td>
                                                 <td>Chandra</td>
@@ -92,7 +100,7 @@
                                                 <td class="text-center" ><span class="badge bg-primary">Waiting For Payment</span></td>
                                             </tr>
                                             <tr>
-                                                <td class="text-center">3</td>
+                                                <td class="text-center">2</td>
                                                 <td class="text-center py-0 align-middle">
                                                     <div class="btn-group btn-group-sm">
                                                       <a href="detail_payment.html" class="btn btn-info" title="Detail" ><i class="fas fa-eye"></i></a>
@@ -125,22 +133,39 @@
 
     </div>
 
-    <script src="./assets/js/js.js" type="text/javascript"></script>
-    <!-- jQuery -->
-    <script src="./assets/vendors/plugins/jquery/jquery.min.js"></script>
-    <!-- Bootstrap 4 -->
-    <script src="./assets/vendors/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <!-- DataTables -->
+     <!-- jQuery -->
+     <script type="text/javascript" src="./assets/vendors/plugins/jquery/jquery.min.js"></script>
+     <!-- Bootstrap 4 -->
+     <script type="text/javascript" src="./assets/vendors/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+     <!-- overlayScrollbars -->
+     <!-- <script type="text/javascript" src="./plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script> -->
+     <!-- AdminLTE App -->
+     <script type="text/javascript" src="./assets/vendors/dist/js/adminlte.min.js"></script>
+     <!-- AdminLTE for demo purposes -->
+     <script type="text/javascript" src="./assets/vendors/dist/js/demo.js"></script>
+     <!-- extra JS to include HTML -->
+     <script src="./assets/js/js.js" type="text/javascript"></script>
+     <!-- Flickity -->
+     <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
+     <script type="text/javascript" src="./assets/js/search.js" ></script>
+     <!-- Ckeditor -->
+     <script src="//cdn.ckeditor.com/4.15.1/standard/ckeditor.js"></script>
+     <!-- InputMask -->
+     <script src="./assets/vendors/plugins/moment/moment.min.js"></script>
+     <script src="./assets/vendors/plugins/inputmask/min/jquery.inputmask.bundle.min.js"></script>
+     <!-- date-range-picker -->
+     <script src="./assets/vendors/plugins/daterangepicker/daterangepicker.js"></script>
+     <!-- Tempusdominus Bootstrap 4 -->
+     <script src="./assets/vendors/plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
+     <!-- Modul AddBook -->
+     <script type="text/javascript" src="./assets/js/modal.js"></script>
+
+     <!-- DataTables -->
     <script src="./assets/vendors/plugins/datatables/jquery.dataTables.min.js"></script>
     <script src="./assets/vendors/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js"></script>
     <script src="./assets/vendors/plugins/datatables-responsive/js/dataTables.responsive.min.js"></script>
     <script src="./assets/vendors/plugins/datatables-responsive/js/responsive.bootstrap4.min.js"></script>
-    <!-- AdminLTE App -->
-    <script src="./assets/vendors/dist/js/adminlte.min.js"></script>
-    <!-- AdminLTE for demo purposes -->
-    <script src="./assets/vendors/dist/js/demo.js"></script>
-
-    <script src="./assets/js/datatable.js" type="text/javascript"></script>
+    <script src="./assets/js/dtpage.js"></script>
 
 </body>
 
