--- a/include_sidebar.html
+++ b/include_sidebar.html
@@ -63,7 +63,7 @@
                   </p>
                 </a>
               </li>
-              <li class="nav-item has-treeview menu">
+              <li class="nav-item has-treeview menu-open">
                 <a href="#" class="nav-link">
                   <i class="nav-icon fas fa-list-ul"></i>
                   <p>
