--- a/rent_management.html
+++ b/rent_management.html
@@ -26,7 +26,17 @@
 <body class="hold-transition sidebar-mini layout-fixed">
     <!-- Site wrapper -->
     <div class="wrapper">
-        <div w3-include-html="include_navbar.html"></div>
+        <!-- Navbar -->
+        <nav class="main-header navbar navbar-expand navbar-light navbar-white d-flex flex-row">
+            <div class="toggle-navbar-nav">
+                <ul class="navbar-nav toggle-navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i
+                                class="fas fa-bars"></i></a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
         <div w3-include-html="include_sidebar.html"></div>
 
         <!-- Content Wrapper. Contains page content -->
@@ -55,15 +65,16 @@
                             <div class="card">
                                 <div class="card-header">
                                     <h3 class="card-title">Rent List</h3>
-                                    <div class="card-tools" >
-                                        <a href="return_book.html" class="btn-xs btn-block bg-gradient-primary" >Return</a>
+                                    <div class="card-tools">
+                                        <a href="return_book.html"
+                                            class="btn-xs btn-block bg-gradient-primary">Return</a>
                                     </div>
                                 </div>
                                 <!-- /.card-header -->
                                 <div class="card-body">
-                                    <table id="datatable1" class="table table-bordered table-striped">
+                                    <table id="example1" class="table table-bordered table-striped">
                                         <thead>
-                                            <tr class="text-center" >
+                                            <tr class="text-center">
                                                 <th>No</th>
                                                 <th>Action</th>
                                                 <th>Borrower</th>
@@ -83,8 +94,10 @@
                                                 <td class="text-center">1</td>
                                                 <td class="text-center py-0 align-middle">
                                                     <div class="btn-group btn-group-sm">
-                                                      <a href="#" class="btn btn-primary" title="Accept" ><i class="fas fa-check-square"></i></a>
-                                                      <a href="#" class="btn btn-danger" title="Cancel" ><i class="fas fa-window-close"></i></a>
+                                                        <a href="#" class="btn btn-primary" title="Accept"><i
+                                                                class="fas fa-check-square"></i></a>
+                                                        <a href="#" class="btn btn-danger" title="Cancel"><i
+                                                                class="fas fa-window-close"></i></a>
                                                     </div>
                                                 </td>
                                                 <td>Chandra</td>
@@ -96,7 +109,8 @@
                                                 <td>-</td>
                                                 <td>-</td>
                                                 <td>-</td>
-                                                <td class="text-center" ><span class="badge bg-primary">Waiting Given By Librarian</span></td>
+                                                <td class="text-center"><span class="badge bg-primary">Waiting Given By
+                                                        Librarian</span></td>
                                             </tr>
                                             <tr>
                                                 <td class="text-center">2</td>
@@ -112,13 +126,15 @@
                                                 <td>-</td>
                                                 <td>-</td>
                                                 <td>-</td>
-                                                <td class="text-center" ><span class="badge bg-danger">Canceled</span></td>
+                                                <td class="text-center"><span class="badge bg-danger">Canceled</span>
+                                                </td>
                                             </tr>
                                             <tr>
                                                 <td class="text-center">3</td>
                                                 <td class="text-center py-0 align-middle">
                                                     <div class="btn-group btn-group-sm">
-                                                      <a href="return_book.html" class="btn btn-info" title="Return" ><i class="fas fa-exchange-alt"></i></a>
+                                                        <a href="return_book.html" class="btn btn-info"
+                                                            title="Return"><i class="fas fa-exchange-alt"></i></a>
                                                     </div>
                                                 </td>
                                                 <td>Chandra</td>
@@ -130,13 +146,15 @@
                                                 <td>-</td>
                                                 <td>-</td>
                                                 <td>-</td>
-                                                <td class="text-center" ><span class="badge bg-info">Waiting For Return</span></td>
+                                                <td class="text-center"><span class="badge bg-info">Waiting For
+                                                        Return</span></td>
                                             </tr>
                                             <tr>
                                                 <td class="text-center">4</td>
                                                 <td class="text-center py-0 align-middle">
                                                     <div class="btn-group btn-group-sm">
-                                                      <a href="return_book.html" class="btn btn-info" title="Return" ><i class="fas fa-exchange-alt"></i></a>
+                                                        <a href="return_book.html" class="btn btn-info"
+                                                            title="Return"><i class="fas fa-exchange-alt"></i></a>
                                                     </div>
                                                 </td>
                                                 <td>Chandra</td>
@@ -148,7 +166,8 @@
                                                 <td>-</td>
                                                 <td>-</td>
                                                 <td>-</td>
-                                                <td class="text-center" ><span class="badge bg-orange">Need Immediate Returns</span></td>
+                                                <td class="text-center"><span class="badge bg-orange">Need Immediate
+                                                        Returns</span></td>
                                             </tr>
                                             <tr>
                                                 <td class="text-center">5</td>
@@ -164,13 +183,15 @@
                                                 <td>-</td>
                                                 <td>-</td>
                                                 <td>-</td>
-                                                <td class="text-center" ><span class="badge bg-primary">Waiting Taken By Librarian</span></td>
+                                                <td class="text-center"><span class="badge bg-primary">Waiting Taken By
+                                                        Librarian</span></td>
                                             </tr>
                                             <tr>
                                                 <td class="text-center">6</td>
                                                 <td class="text-center py-0 align-middle">
                                                     <div class="btn-group btn-group-sm">
-                                                      <a href="payment.html" class="btn btn-secondary" title="Payment" ><i class="fas fa-file-invoice"></i></a>
+                                                        <a href="payment.html" class="btn btn-secondary"
+                                                            title="Payment"><i class="fas fa-file-invoice"></i></a>
                                                     </div>
                                                 </td>
                                                 <td>Chandra</td>
@@ -182,7 +203,8 @@
                                                 <td>24 Nov 2020</td>
                                                 <td>Librarian</td>
                                                 <td>Rp 4.000,-</td>
-                                                <td class="text-center" ><span class="badge bg-warning">Waiting for Payment of Fines</span></td>
+                                                <td class="text-center"><span class="badge bg-warning">Waiting for
+                                                        Payment of Fines</span></td>
                                             </tr>
                                             <tr>
                                                 <td class="text-center">7</td>
@@ -198,7 +220,8 @@
                                                 <td>24 Nov 2020</td>
                                                 <td>Librarian</td>
                                                 <td>Rp 4.000,-</td>
-                                                <td class="text-center" ><span class="badge bg-success">Returned</span></td>
+                                                <td class="text-center"><span class="badge bg-success">Returned</span>
+                                                </td>
                                             </tr>
                                         </tbody>
                                     </table>
@@ -220,22 +243,37 @@
 
     </div>
 
-    <script src="./assets/js/js.js" type="text/javascript"></script>
-    <!-- jQuery -->
-    <script src="./assets/vendors/plugins/jquery/jquery.min.js"></script>
-    <!-- Bootstrap 4 -->
-    <script src="./assets/vendors/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <!-- DataTables -->
+     <!-- jQuery -->
+     <script type="text/javascript" src="./assets/vendors/plugins/jquery/jquery.min.js"></script>
+     <!-- Bootstrap 4 -->
+     <script type="text/javascript" src="./assets/vendors/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+     <!-- overlayScrollbars -->
+     <!-- <script type="text/javascript" src="./plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script> -->
+     <!-- AdminLTE App -->
+     <script type="text/javascript" src="./assets/vendors/dist/js/adminlte.min.js"></script>
+     <!-- AdminLTE for demo purposes -->
+     <script type="text/javascript" src="./assets/vendors/dist/js/demo.js"></script>
+     <!-- extra JS to include HTML -->
+     <script src="./assets/js/js.js" type="text/javascript"></script>
+     <!-- Flickity -->
+     <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
+     <script type="text/javascript" src="./assets/js/search.js" ></script>
+     <!-- InputMask -->
+     <script src="./assets/vendors/plugins/moment/moment.min.js"></script>
+     <script src="./assets/vendors/plugins/inputmask/min/jquery.inputmask.bundle.min.js"></script>
+     <!-- date-range-picker -->
+     <script src="./assets/vendors/plugins/daterangepicker/daterangepicker.js"></script>
+     <!-- Tempusdominus Bootstrap 4 -->
+     <script src="./assets/vendors/plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
+     <!-- Modul AddBook -->
+     <script type="text/javascript" src="./assets/js/modal.js"></script>
+
+     <!-- DataTables -->
     <script src="./assets/vendors/plugins/datatables/jquery.dataTables.min.js"></script>
     <script src="./assets/vendors/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js"></script>
     <script src="./assets/vendors/plugins/datatables-responsive/js/dataTables.responsive.min.js"></script>
     <script src="./assets/vendors/plugins/datatables-responsive/js/responsive.bootstrap4.min.js"></script>
-    <!-- AdminLTE App -->
-    <script src="./assets/vendors/dist/js/adminlte.min.js"></script>
-    <!-- AdminLTE for demo purposes -->
-    <script src="./assets/vendors/dist/js/demo.js"></script>
-
-    <script src="./assets/js/datatable.js" type="text/javascript"></script>
+    <script src="./assets/js/dtpage.js"></script>
 
 </body>
 
