mengubah file profile.js

--- a/Profile.html
+++ b/Profile.html
@@ -284,7 +284,7 @@
                   </div>
                   <div class="data">
                       <h5>Address</h5>
-                      <span id="address">South Korea</span>
+                      <span id="address">Indonesia</span>
                       <hr>
                   </div>
                 </div>
