--- a/change_password.html
+++ b/change_password.html
@@ -242,13 +242,13 @@
                   <div class="form-group row">
                       <label class="col-sm-3 col-form-label">Email</label>
                       <div class="col-sm-8">
-                      <input type="email" name="email" class="form-control" placeholder="example@gmail.com" autocomplete="off">
+                      <input type="email" name="email" class="form-control" placeholder="example@gmail.com" id="inputEmail">
                       </div>
                   </div>
                   <div class="form-group row">
                       <label for="inputPassword3" class="col-sm-3 col-form-label">Old Password</label>
                       <div class="col-sm-8">
-                      <input type="password" name="oldPassword" class="form-control" id="inputOldPassword" autocomplete="off">
+                      <input type="password" name="oldPassword" class="form-control" id="inputOldPassword">
                       <small id="passwordHelpBlock" class="form-text text-muted">
                           Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
                       </small>
@@ -257,7 +257,7 @@
                   <div class="form-group row">
                       <label for="inputPassword3" class="col-sm-3 col-form-label">New Password</label>
                       <div class="col-sm-8">
-                      <input type="password" name="newPassword"class="form-control" id="inputNewPassword" autocomplete="off">
+                      <input type="password" name="newPassword"class="form-control" id="inputNewPassword">
                       <small id="passwordHelpBlock" class="form-text text-muted">
                           Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
                       </small>
@@ -266,35 +266,21 @@
                   <div class="form-group row">
                       <label for="inputPassword3" class="col-sm-3 col-form-label">Verify Password</label>
                       <div class="col-sm-8">
-                      <input type="password" name="verifyPassword"class="form-control" id="inputVerifyPassword" autocomplete="off">
+                      <input type="password" name="verifyPassword"class="form-control" id="inputVerifyPassword">
                       <small id="passwordHelpBlock" class="form-text text-muted">
                           Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
                       </small>
                       </div>
                   </div>
                   <div class="save-pwd">
-                      <button id="close-change"type="button" class="btn btn-light">Close</button>
-                      <button id="save-change" type="submit" class="btn btn-primary">Save</button>
+                    <input id="save-change" type="submit" value="Save" class="btn btn-primary" onclick="submitChangePassword()">
+                    <button id="close-change"type="button" class="btn btn-light">Close</button>
                   </div>
               </form>
           </div>
       </div>
     </div>
-
-
-    <!-- jQuery -->
-    <script src="./assets/vendors/plugins/jquery/jquery.min.js"></script>
-    <!-- Bootstrap 4 -->
-    <script src="./assets/vendors/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <!-- jquery-validation -->
-    <script src="./assets/vendors/plugins/jquery-validation/jquery.validate.min.js"></script>
-    <script src="./assets/vendors/plugins/jquery-validation/additional-methods.min.js"></script>
-    <!-- AdminLTE App -->
-    <script src="./assets/vendors/dist/js/adminlte.min.js"></script>
-    <script src="change_pwd.js"></script>
-
-
-
+    
 <!-- jQuery -->
 <script src="assets/vendors/plugins/jquery/jquery.min.js"></script>
 <!-- Bootstrap 4 -->
