changed table content

--- a/payment.html
+++ b/payment.html
@@ -312,7 +312,7 @@
                                         <div class="table-responsive" >
                                           <table class="table">
                                             <tr>
-                                              <th style="width:50%">Subtotal:</th>
+                                              <th style="width:59%;">Total:</th>
                                               <td>Rp. 20.000</td>
                                             </tr>
                                           </table>
@@ -327,9 +327,6 @@
                                       <div class="col-12">
                                         <a href="payment_invoice_print.html" target="_blank" class="btn btn-default"><i class="fas fa-print"></i> Print</a>
                                         <button type="button" class="btn btn-success float-right"><i class="far fa-credit-card"></i> Pay
-                                        </button>
-                                        <button type="button" class="btn btn-primary float-right" style="margin-right: 5px;">
-                                          <i class="fas fa-download"></i> Generate PDF
                                         </button>
                                       </div>
                                     </div>
@@ -427,12 +424,12 @@
                                       </div>
                                       <!-- /.col -->
                                       <div class="col-6">
-                                        <p class="lead" style="float:right">Amount Due 19/11/2020</p>
+                                        <p class="lead float-right">Amount Due 19/11/2020</p>
                       
                                         <div class="table-responsive" >
                                           <table class="table">
                                             <tr>
-                                              <th style="width:50%">Subtotal:</th>
+                                              <th style="width:59%">Total:</th>
                                               <td>Rp. 30.000</td>
                                             </tr>
                                           </table>
@@ -447,9 +444,6 @@
                                       <div class="col-12">
                                         <a href="payment_invoice_print.html" target="_blank" class="btn btn-default"><i class="fas fa-print"></i> Print</a>
                                         <button type="button" class="btn btn-success float-right"><i class="far fa-credit-card"></i> Pay
-                                        </button>
-                                        <button type="button" class="btn btn-primary float-right" style="margin-right: 5px;">
-                                          <i class="fas fa-download"></i> Generate PDF
                                         </button>
                                       </div>
                                     </div>
@@ -547,12 +541,12 @@
                                       </div>
                                       <!-- /.col -->
                                       <div class="col-6">
-                                        <p class="lead" style="float:right">Amount Due 24/11/2020</p>
+                                        <p class="lead float-right">Amount Due 24/11/2020</p>
                       
                                         <div class="table-responsive" >
                                           <table class="table">
                                             <tr>
-                                              <th style="width:50%">Subtotal:</th>
+                                              <th style="width:59%">Total:</th>
                                               <td>Rp. 10.000</td>
                                             </tr>
                                           </table>
@@ -567,9 +561,6 @@
                                       <div class="col-12">
                                         <a href="payment_invoice_print.html" target="_blank" class="btn btn-default"><i class="fas fa-print"></i> Print</a>
                                         <button type="button" class="btn btn-success float-right"><i class="far fa-credit-card"></i> Pay
-                                        </button>
-                                        <button type="button" class="btn btn-primary float-right" style="margin-right: 5px;">
-                                          <i class="fas fa-download"></i> Generate PDF
                                         </button>
                                       </div>
                                     </div>
