changed action style in slideshow and category

--- a/slideshow_management.html
+++ b/slideshow_management.html
@@ -225,14 +225,15 @@
                       <tbody>
                         <tr>
                           <td>1</td>
-                          <td>
-                            <button type="button" class="btn" data-toggle="modal" data-target="#modal-edit">
-                              <i class="fas fa-edit"></i>
-                            </button>
-                            |
-                            <button type="button" class="btn" data-toggle="modal" data-target="#modal-delete">
-                              <i class="fas fa-trash"></i>
-                            </button>
+                          <td class="text-center py-0 align-middle">
+                            <div class="btn-group btn-group-sm">
+                              <button data-toggle="modal" data-target="#modal-edit" class="btn btn-success"
+                              ><i class="fas fa-pen"></i
+                              ></button>
+                              <button data-toggle="modal" data-target="#modal-delete" class="btn btn-danger"
+                              ><i class="fas fa-trash"></i
+                              ></a>
+                           </div>
                           </td>
                           <td>Ubur-ubur Lembur</td>
                           <td>Raditya Dika</td>
@@ -244,14 +245,15 @@
     
                         <tr>
                           <td>2</td>
-                          <td>
-                            <button type="button" class="btn" data-toggle="modal" data-target="#modal-edit">
-                              <i class="fas fa-edit"></i>
-                            </button>
-                            |
-                            <button type="button" class="btn" data-toggle="modal" data-target="#modal-delete">
-                              <i class="fas fa-trash"></i>
-                            </button>
+                          <td class="text-center py-0 align-middle">
+                            <div class="btn-group btn-group-sm">
+                              <button data-toggle="modal" data-target="#modal-edit" class="btn btn-success"
+                              ><i class="fas fa-pen"></i
+                              ></button>
+                              <button data-toggle="modal" data-target="#modal-delete" class="btn btn-danger"
+                              ><i class="fas fa-trash"></i
+                              ></a>
+                           </div>
                           </td>
                           <td>Laskar Pelangi</td>
                           <td>Andrea Hirata</td>
@@ -263,14 +265,15 @@
     
                         <tr>
                           <td>3</td>
-                          <td>
-                            <button type="button" class="btn" data-toggle="modal" data-target="#modal-edit">
-                              <i class="fas fa-edit"></i>
-                            </button>
-                            |
-                            <button type="button" class="btn" data-toggle="modal" data-target="#modal-delete">
-                              <i class="fas fa-trash"></i>
-                            </button>
+                          <td class="text-center py-0 align-middle">
+                            <div class="btn-group btn-group-sm">
+                              <button data-toggle="modal" data-target="#modal-edit" class="btn btn-success"
+                              ><i class="fas fa-pen"></i
+                              ></button>
+                              <button data-toggle="modal" data-target="#modal-delete" class="btn btn-danger"
+                              ><i class="fas fa-trash"></i
+                              ></a>
+                           </div>
                           </td>
                           <td>Dilan 1990</td>
                           <td>Raditya Dika</td>
