--- a/change_password.html
+++ b/change_password.html
@@ -257,7 +257,7 @@
                   <div class="form-group row">
                       <label for="inputPassword3" class="col-sm-3 col-form-label">New Password</label>
                       <div class="col-sm-8">
-                      <input type="password" name="newPassword"class="form-control" id="inputNewPassword">
+                      <input type="password" name="newPassword" class="form-control" id="inputNewPassword">
                       <small id="passwordHelpBlock" class="form-text text-muted">
                           Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
                       </small>
@@ -266,14 +266,14 @@
                   <div class="form-group row">
                       <label for="inputPassword3" class="col-sm-3 col-form-label">Verify Password</label>
                       <div class="col-sm-8">
-                      <input type="password" name="verifyPassword"class="form-control" id="inputVerifyPassword">
+                      <input type="password" name="verifyPassword" class="form-control" id="inputVerifyPassword">
                       <small id="passwordHelpBlock" class="form-text text-muted">
                           Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
                       </small>
                       </div>
                   </div>
                   <div class="save-pwd">
-                    <input id="save-change" type="submit" value="Save" class="btn btn-primary" onclick="submitChangePassword()">
+                    <input id="save-change" type="submit" value="Confirm" class="btn btn-primary" onclick="submitChangePassword()">
                     <button id="close-change"type="button" class="btn btn-light">Close</button>
                   </div>
               </form>
