added sweetalert on edit category

--- a/category_management.html
+++ b/category_management.html
@@ -564,16 +564,16 @@
                             <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
-                    <form role="form">
+                    <form role="form" id="editCategory">
                         <div class="modal-body">
                             <div class="card-body">
                                 <div class="form-group">
                                     <label for="inputCategoryId">Category ID</label>
-                                    <input type="text" class="form-control" id="inputCategoryId" value="CTG0001">
+                                    <input type="text" class="form-control" name="categoryId" id="inputCategoryId" value="CTG0001">
                                 </div>
                                 <div class="form-group">
                                     <label for="inputCategoryName">Category Name</label>
-                                    <input type="text" class="form-control" id="inputCategoryName" value="Fantasy">
+                                    <input type="text" class="form-control" name="categoryName" id="inputCategoryName" value="Fantasy">
                                 </div>
                             </div>
                         </div>
