--- a/donation.html
+++ b/donation.html
@@ -128,7 +128,7 @@
                     </div>
                   </div>
                   <div class="form-group row">
-                    <label for="inputPassword3" class="col-sm-2 col-form-label">Name</label>
+                    <label for="inputName3" class="col-sm-2 col-form-label">Name</label>
                     <div class="col-sm-10">
                       <input type="Name" class="form-control" id="inputName3" placeholder="Name">
                     </div>
@@ -136,25 +136,19 @@
                   <div class="form-group row">
                     <label for="inputDonationType3" class="col-sm-2 col-form-label">Donation Type</label>
                     <div class="col-sm-10">
-                      <input type="Name" class="form-control" id="inputDonationtype3" placeholder="Donation">
+                      <input type="Name" class="form-control" id="inputDonationtype3" placeholder="person or organization">
                     </div>
                   </div>
                   <div class="form-group row">
-                    <label for="inputPhone3" class="col-sm-2 col-form-label">Phone Number</label>
+                    <label for="inputNumberofphone3" class="col-sm-2 col-form-label">Phone Number</label>
                     <div class="col-sm-10">
                       <input type="Numberofphone" class="form-control" id="inputPhone3" placeholder="Phone Number">
                     </div>
                   </div>
                   <div class="form-group row">
-                    <label for="inputBookbybook3" class="col-sm-2 col-form-label">Book by each book</label>
+                    <label for="inputNumberofbook3" class="col-sm-2 col-form-label">Total Book by number</label>
                     <div class="col-sm-10">
-                      <input type="Numberofbook" class="form-control" id="inputBookbybook3" placeholder="Book by number of book">
-                    </div>
-                  </div>
-                  <div class="form-group row">
-                    <label for="inputPassword3" class="col-sm-2 col-form-label">Book by weights</label>
-                    <div class="col-sm-10">
-                      <input type="weight" class="form-control" id="inputBookbyweight3" placeholder="Book by weight in kg">
+                      <input type="Numberofbook" class="form-control" id="inputBookbybook3" placeholder="1,2,3,...">
                     </div>
                   </div>
                   </div>
@@ -169,13 +163,6 @@
     </div>
   </div>
     <!-- /.modal -->
-
-              <a class="btn btn-danger" id="btn-delete" href="#" data-dismiss="modal" data-toggle="modal"
-                data-target="#BerhasilModal">Delete</a>
-            </div>
-          </div>
-        </div>
-      </div>
       <div class="modal fade" id="cancelModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabesl"
         aria-hidden="true">
         <div class="modal-dialog" role="document">
