detail invoice dan payment invoice print paid

--- a/fine_management.html
+++ b/fine_management.html
@@ -103,7 +103,7 @@
                                                 <td class="text-center">2</td>
                                                 <td class="text-center py-0 align-middle">
                                                     <div class="btn-group btn-group-sm">
-                                                      <a href="detail_payment.html" class="btn btn-info" title="Detail" ><i class="fas fa-eye"></i></a>
+                                                      <a href="detail_invoice.html" class="btn btn-info" title="Detail" ><i class="fas fa-eye"></i></a>
                                                     </div>
                                                 </td>
                                                 <td>Chandra</td>
