changed invoice dropdown name

--- a/payment.html
+++ b/payment.html
@@ -198,9 +198,9 @@
                     <label>Select Invoice: </label>
                     <select class="form-control" style="width: 50%" id="selector">
                       <option>Select Invoice</option>
-                      <option value="invoice-1">Invoice 1</option>
-                      <option value="invoice-2">Invoice 2</option>
-                      <option value="invoice-3">Invoice 3</option>
+                      <option value="invoice-1">Invoice #007612</option>
+                      <option value="invoice-2">Invoice #007783</option>
+                      <option value="invoice-3">Invoice #007790</option>
                     </select>
                   </div>
                 </div>
