--- a/include_sidebar.html
+++ b/include_sidebar.html
@@ -73,13 +73,13 @@
                 </a>
                 <ul class="nav nav-treeview">
                   <li class="nav-item">
-                    <a href="/user_management.html" class="nav-link">
+                    <a href="user_management.html" class="nav-link">
                       <i class="fas fa-users nav-icon"></i>
                       <p>User Management</p>
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a href="/book_management.html" class="nav-link">
+                    <a href="book_management.html" class="nav-link">
                       <i class="fas fa-book nav-icon"></i>
                       <p>Book Management</p>
                     </a>
@@ -109,7 +109,7 @@
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a href="#" class="nav-link">
+                    <a href="donate_management.html" class="nav-link">
                       <i class="fa fa-hands-helping nav-icon"></i>
                       <p>Donation Management</p>
                     </a>
@@ -117,7 +117,7 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link">
+                <a href="donation.html" class="nav-link">
                   <i class="nav-icon fas fa-people-carry"></i>
                   <p>
                     Donation
