--- a/donate_management.html
+++ b/donate_management.html
@@ -24,7 +24,6 @@
 
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 
 </head>
 
@@ -83,8 +82,8 @@
                                                 <td class="text-center">1</td>
                                                 <td class="text-center py-0 align-middle">
                                                     <div class="btn-group btn-group-sm">
-                                                      <a href="#" class="btn btn-info"><i class="glyphicon glyphicon-ok"></i></a>
-                                                      <a href="#" class="btn btn-danger"><i class="glyphicon glyphicon-remove"></i></a>
+                                                      <a href="#" class="btn btn-info"><i class="fa fa-check" aria-hidden="true"></i></a>
+                                                      <a href="#" class="btn btn-danger"><i class="fa fa-times" aria-hidden="true"></i></a>
                                                     </div>
                                                 </td>
                                                 <td>Chandra@....</td>
@@ -100,8 +99,8 @@
                                                 <td class="text-center">2</td>
                                                 <td class="text-center py-0 align-middle">
                                                     <div class="btn-group btn-group-sm">
-                                                     <a href="#" class="btn btn-info"><i class="glyphicon glyphicon-ok"></i></a>
-                                                     <a href="#" class="btn btn-danger"><i class="glyphicon glyphicon-remove"></i></a>
+                                                     <a href="#" class="btn btn-info"><i class="fa fa-check" aria-hidden="true"></i></a>
+                                                     <a href="#" class="btn btn-danger"><i class="fa fa-times" aria-hidden="true"></i></a>
                                                     </div>
                                                 </td>
                                                 <td>Tika@...</td>
@@ -117,7 +116,7 @@
                                             <td class="text-center">3</td>
                                             <td class="text-center py-0 align-middle">
                                                 <div class="btn-group btn-group-sm">
-                                                 <a href="#" class="btn btn-info"><i class="glyphicon glyphicon-ok"></i></a>
+                                                 <a href="#" class="btn btn-info"><i class="fa fa-check" aria-hidden="true"></i></a>
                                                 </div>
                                             </td>
                                             <td>Kevin@...</td>
@@ -131,8 +130,8 @@
                                             <td class="text-center">4</td>
                                             <td class="text-center py-0 align-middle">
                                                 <div class="btn-group btn-group-sm">
-                                                 <a href="#" class="btn btn-info"><i class="glyphicon glyphicon-ok"></i></a>
-                                                 <a href="#" class="btn btn-danger"><i class="glyphicon glyphicon-remove"></i></a>
+                                                 <a href="#" class="btn btn-info"><i class="fa fa-check" aria-hidden="true"></i></a>
+                                                 <a href="#" class="btn btn-danger"><i class="fa fa-times" aria-hidden="true"></i></a>
                                                 </div>
                                             </td>
                                             <td>Jayson@...</td>
@@ -146,8 +145,8 @@
                                             <td class="text-center">5</td>
                                             <td class="text-center py-0 align-middle">
                                                 <div class="btn-group btn-group-sm">
-                                                 <a href="#" class="btn btn-info"><i class="glyphicon glyphicon-ok"></i></a>
-                                                 <a href="#" class="btn btn-danger"><i class="glyphicon glyphicon-remove"></i></a>
+                                                 <a href="#" class="btn btn-info"><i class="fa fa-check" aria-hidden="true"></i></a>
+                                                 <a href="#" class="btn btn-danger"><i class="fa fa-times" aria-hidden="true"></i></a>
                                                 </div>
                                             </td>
                                             <td>Naufal@...</td>
@@ -161,7 +160,7 @@
                                             <td class="text-center">6</td>
                                             <td class="text-center py-0 align-middle">
                                                 <div class="btn-group btn-group-sm">
-                                                  <a href="#" class="btn btn-info"><i class="glyphicon glyphicon-ok"></i></a>
+                                                  <a href="#" class="btn btn-info"><i class="fa fa-check" aria-hidden="true"></i></a>
                                                 </div>
                                             </td>
                                             <td>Dayan@...</td>
