--- a/donation.html
+++ b/donation.html
@@ -42,7 +42,7 @@
           </div>
           <div class="row">
             <div class="col-sm-12">
-              <img class="big-preview" src="./assets/media/books/donation-book.jpg" width="600px" height="200px">
+              <img class="big-preview" width="1600px" height="1200px">
             </div>
           </div>
         </div><!-- /.container-fluid -->
@@ -54,7 +54,7 @@
 
           <div class="row">
             <div class="col-sm-6">
-              <h1 class="titletext">GREAT REASONS TO DONATE GOOD USED BOOKS!</h1>
+              <h1 class="title-text">GREAT REASONS TO DONATE GOOD USED BOOKS!</h1>
             </div>
                 <div class="row">
             <div class=col-sm-8>
