added reset modal on close

--- a/category_management.html
+++ b/category_management.html
@@ -200,11 +200,7 @@
                     <div class="card">
                         <div class="card-header">
                             <div class="row">
-                                <div class="col-md-6">
-
-                                </div>
-
-                                <div class="col-md-6 ctm-responsive">
+                                <div class="col-md-12 ctm-responsive">
                                     <button type="button" class="btn btn-warning add-btn" data-toggle="modal"
                                         data-target="#modal-add" style="float:right">
                                         <i class="nav-icon fas fa-plus"></i>
@@ -543,7 +539,7 @@
                             </div>
                         </div>
                         <div class="modal-footer justify-content-between">
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-default" data-dismiss="modal" onclick="resetModal()">Close</button>
                             <button type="submit" class="btn btn-warning">Add</button>
                         </div>
                     </form>
