--- a/slideshow_management.html
+++ b/slideshow_management.html
@@ -321,7 +321,7 @@
               </div>
             </div>
             <div class="modal-footer justify-content-between">
-              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-default" data-dismiss="modal" onclick="resetModal()">Close</button>
               <button type="submit" class="btn btn-warning">Add</button>
             </div>
           </form>
